--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,6 +5,21 @@
   text-align: center;
 }
 
+/* ユーザー勤怠情報テーブル */
+
+#table-attendances {
+  th {
+    vertical-align: middle;
+    text-align: center;
+  }
+  td {
+    vertical-align: middle;
+    text-align: center;
+  }
+}
+
+/* 入力フォーム */
+
 .label-signup {
   margin-top: 5px;
 }
@@ -12,6 +27,7 @@
 .btn-signup {
   margin-top: 10px;
 }
+
 .label-user--edit {
   margin-top: 5px;
 }
